Updating email address

--- a/themes/cleanblog/_config.yml
+++ b/themes/cleanblog/_config.yml
@@ -38,4 +38,4 @@ github_url: https://github.com/jobapis
 gitlab_url:
 linkedin_url:
 rss_url: /rss.xml
-mailto: info@jobbrander.com
+mailto: admin@jobapis.com
